--- a/src/app/styles/main.scss
+++ b/src/app/styles/main.scss
@@ -1,1 +1,5 @@
+// Vendors
 @import url('https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css');
+
+// Pages
+@import 'homepage';
